added the divs for header icons and styled the heading alittle

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +8,7 @@
     <!--För dator-->
     <link rel="stylesheet" media="(min-width: 800px)" href="layout/layout.css">
     <!--För mobil-->
-    <link rel="stylesheet" media="(max-width: 799px)"  href="layout/layoutPhone.css"> 
+    <link rel="stylesheet" media="(max-width: 799px)" href="layout/layoutPhone.css">
     <script defer type="text/javascript" src="jquery-3.4.1.js"></script>
 
     <link rel="stylesheet" media="(min-width: 800px)" href="calender/calender.css">
@@ -18,9 +19,16 @@
     <script defer src="ToDo/ToDo.js"></script>
     <title>Document</title>
 </head>
+
 <body class="grid">
     <header>
-
+        <div class="iconsForSeasons">
+            testing
+        </div>
+        <h1>Kalender 2019</h1>
+        <div class="iconsForCalenderMonths">
+            testing
+        </div>
     </header>
     <aside>
 
@@ -29,4 +37,5 @@
 
     </main>
 </body>
+
 </html>
