added imgs to the index and rootfolder

--- a/index.html
+++ b/index.html
@@ -23,11 +23,25 @@
 <body class="grid">
     <header>
         <div class="iconsForSeasons">
-            testing
+            <img src="/Images/seasons/winter.png" alt="Winter">
+            <img src="Images/seasons/spring.png" alt="Spring">
+            <img src="Images/seasons/summer.png" alt="Summer">
+            <img src="Images/seasons/fall.png" alt="Fall">
         </div>
         <h1>Kalender 2019</h1>
         <div class="iconsForCalenderMonths">
-            testing
+            <img src="Images/imgsForMonths/november.png" alt="November">
+            <img src="Images/imgsForMonths/december.png" alt="December">
+            <img src="Images/imgsForMonths/january.png" alt="Januari">
+            <img src="Images/imgsForMonths/february.png" alt="Februari">
+            <img src="Images/imgsForMonths/march.png" alt="Mars">
+            <img src="Images/imgsForMonths/april.png" alt="April">
+            <img src="Images/imgsForMonths/may.png" alt="Maj">
+            <img src="Images/imgsForMonths/june.png" alt="Juni">
+            <img src="Images/imgsForMonths/july.png" alt="Juli">
+            <img src="Images/imgsForMonths/august.png" alt="Augusti">
+            <img src="Images/imgsForMonths/september.png" alt="September">
+            <img src="Images/imgsForMonths/october.png" alt="Oktober">
         </div>
     </header>
     <aside>
