added switch to make season img change if new season

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 <body class="grid">
     <header>
         <div class="iconsForSeasons">
-            <img src="/Images/seasons/winter.png" alt="Winter">
-            <img src="Images/seasons/spring.png" alt="Spring">
-            <img src="Images/seasons/summer.png" alt="Summer">
-            <img src="Images/seasons/fall.png" alt="Fall">
+            <img src="/Images/seasons/winter.png" id="winter" alt="Winter">
+            <img src="Images/seasons/spring.png" id="spring" alt="Spring">
+            <img src="Images/seasons/summer.png" id="summer" alt="Summer">
+            <img src="Images/seasons/fall.png" id="fall" alt="Fall">
         </div>
         <h1>Kalender 2019</h1>
         <div class="iconsForCalenderMonths">
