function for months added, header h1 font family added

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <script defer src="layout/layout.js"></script>
     <script defer src="calender/calender.js"></script>
     <script defer src="ToDo/ToDo.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Quicksand:600&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 
@@ -30,18 +31,18 @@
         </div>
         <h1>Kalender 2019</h1>
         <div class="iconsForCalenderMonths">
-            <img src="Images/imgsForMonths/november.png" alt="November">
-            <img src="Images/imgsForMonths/december.png" alt="December">
-            <img src="Images/imgsForMonths/january.png" alt="Januari">
-            <img src="Images/imgsForMonths/february.png" alt="Februari">
-            <img src="Images/imgsForMonths/march.png" alt="Mars">
-            <img src="Images/imgsForMonths/april.png" alt="April">
-            <img src="Images/imgsForMonths/may.png" alt="Maj">
-            <img src="Images/imgsForMonths/june.png" alt="Juni">
-            <img src="Images/imgsForMonths/july.png" alt="Juli">
-            <img src="Images/imgsForMonths/august.png" alt="Augusti">
-            <img src="Images/imgsForMonths/september.png" alt="September">
-            <img src="Images/imgsForMonths/october.png" alt="Oktober">
+            <img src="Images/imgsForMonths/november.png" id="november" alt="November">
+            <img src="Images/imgsForMonths/december.png" id="december" alt="December">
+            <img src="Images/imgsForMonths/january.png" id="january" alt="Januari">
+            <img src="Images/imgsForMonths/february.png" id="february" alt="Februari">
+            <img src="Images/imgsForMonths/march.png" id="march" alt="Mars">
+            <img src="Images/imgsForMonths/april.png" id="april" alt="April">
+            <img src="Images/imgsForMonths/may.png" id="may" alt="Maj">
+            <img src="Images/imgsForMonths/june.png" id="june" alt="Juni">
+            <img src="Images/imgsForMonths/july.png" id="july" alt="Juli">
+            <img src="Images/imgsForMonths/august.png" id="august" alt="Augusti">
+            <img src="Images/imgsForMonths/september.png" id="september" alt="September">
+            <img src="Images/imgsForMonths/october.png" id="october" alt="Oktober">
         </div>
     </header>
     <aside>
