--- a/index.html
+++ b/index.html
@@ -22,27 +22,28 @@
 </head>
 
 <body class="grid">
+    <!--Header with 2 divs for each month and each season. They appear when right month/season is active-->
     <header>
         <div class="iconsForSeasons">
-            <img src="/Images/seasons/winter.png" id="winter" alt="Winter">
-            <img src="Images/seasons/spring.png" id="spring" alt="Spring">
-            <img src="Images/seasons/summer.png" id="summer" alt="Summer">
-            <img src="Images/seasons/fall.png" id="fall" alt="Fall">
+            <img src="/Images/seasons/winter.png" class="seasonImgs" class="seasonImgs" id="winter" alt="Winter">
+            <img src="Images/seasons/spring.png" class="seasonImgs" id="spring" alt="Spring">
+            <img src="Images/seasons/summer.png" class="seasonImgs" id="summer" alt="Summer">
+            <img src="Images/seasons/fall.png" class="seasonImgs" id="fall" alt="Fall">
         </div>
         <h1>Kalender 2019</h1>
         <div class="iconsForCalenderMonths">
-            <img src="Images/imgsForMonths/november.png" id="november" alt="November">
-            <img src="Images/imgsForMonths/december.png" id="december" alt="December">
-            <img src="Images/imgsForMonths/january.png" id="january" alt="Januari">
-            <img src="Images/imgsForMonths/february.png" id="february" alt="Februari">
-            <img src="Images/imgsForMonths/march.png" id="march" alt="Mars">
-            <img src="Images/imgsForMonths/april.png" id="april" alt="April">
-            <img src="Images/imgsForMonths/may.png" id="may" alt="Maj">
-            <img src="Images/imgsForMonths/june.png" id="june" alt="Juni">
-            <img src="Images/imgsForMonths/july.png" id="july" alt="Juli">
-            <img src="Images/imgsForMonths/august.png" id="august" alt="Augusti">
-            <img src="Images/imgsForMonths/september.png" id="september" alt="September">
-            <img src="Images/imgsForMonths/october.png" id="october" alt="Oktober">
+            <img src="Images/imgsForMonths/november.png" class="monthImgs" id="november" alt="November">
+            <img src="Images/imgsForMonths/december.png" class="monthImgs" id="december" alt="December">
+            <img src="Images/imgsForMonths/january.png" class="monthImgs" id="january" alt="Januari">
+            <img src="Images/imgsForMonths/february.png" class="monthImgs" id="february" alt="Februari">
+            <img src="Images/imgsForMonths/march.png" class="monthImgs" id="march" alt="Mars">
+            <img src="Images/imgsForMonths/april.png" class="monthImgs" id="april" alt="April">
+            <img src="Images/imgsForMonths/may.png" class="monthImgs" id="may" alt="Maj">
+            <img src="Images/imgsForMonths/june.png" class="monthImgs" id="june" alt="Juni">
+            <img src="Images/imgsForMonths/july.png" class="monthImgs" id="july" alt="Juli">
+            <img src="Images/imgsForMonths/august.png" class="monthImgs" id="august" alt="Augusti">
+            <img src="Images/imgsForMonths/september.png" class="monthImgs" id="september" alt="September">
+            <img src="Images/imgsForMonths/october.png" class="monthImgs" id="october" alt="Oktober">
         </div>
     </header>
     <aside>
