--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
     <script defer src="calender/calender.js"></script>
     <script defer src="ToDo/ToDo.js"></script>
+    <script defer src="layout/layout.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Quicksand:600&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
