We added a local storage

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!--Header with 2 divs for each month and each season. They appear when right month/season is active-->
     <header>
         <div class="iconsForSeasons">
-            <img src="/Images/seasons/winter.png" class="seasonImgs" class="seasonImgs" id="winter" alt="Winter">
+            <img src="Images/seasons/winter.png" class="seasonImgs" class="seasonImgs" id="winter" alt="Winter">
             <img src="Images/seasons/spring.png" class="seasonImgs" id="spring" alt="Spring">
             <img src="Images/seasons/summer.png" class="seasonImgs" id="summer" alt="Summer">
             <img src="Images/seasons/fall.png" class="seasonImgs" id="fall" alt="Fall">
