--- a/index.html
+++ b/index.html
@@ -73,6 +73,200 @@
         </div>
     </aside>
     <main>
+        <div id="calender">
+            <div class="row">
+                <div id="d-1" class="month-day">
+                    <div class="date">99</div>
+                    <div class="todo"><div class="badge">10</div></div>
+                    <div class="event-box">
+                        <div class="holiday">JUL</div>
+                        <div class="event">Birthday</div>
+                    </div>
+                </div>
+                <div id="d-2" class="month-day">
+                    <div class="date">99</div>
+                    <div class="todo"><div class="badge">3</div></div>
+                    <div class="event-box">holiday</div>
+                </div>
+                <div id="d-3" class="month-day">
+                    <div class="date">99</div>
+                    <div class="todo"><div class="badge"></div></div>
+                    <div class="event-box">holiday</div>
+                </div>
+                <div id="d-4" class="month-day">
+                    <div class="date">99</div>
+                    <div class="todo"><div class="badge"></div></div>
+                    <div class="event-box">holiday</div>
+                </div>
+                <div id="d-5" class="month-day">
+                    <div class="date">1</div>
+                    <div class="todo"><div class="badge">5</div></div>
+                    <div class="event-box">holiday</div>
+                </div>
+                <div id="d-6" class="month-day weekend">
+                    <div class="date">1</div>
+                    <div class="todo"><div class="badge">10</div></div>
+                    <div class="event-box">holiday</div>
+                </div>
+                <div id="d-7" class="month-day weekend">
+                    <div class="date">1</div>
+                    <div class="todo"><div class="badge">10</div></div>
+                    <div class="event-box">holiday</div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div id="d-8" class="month-day">
+                    <div class="date">1</div>
+                    <div class="todo"><div class="badge">2</div></div>
+                    <div class="event-box">holiday</div>
+                </div>
+                <div id="d-9" class="month-day">
+                    <div class="date">1</div>
+                    <div class="todo"><div class="badge">16</div></div>
+                    <div class="event-box">holiday</div>
+                </div>
+                <div id="d-10" class="month-day">
+                    <div class="date">1</div>
+                    <div class="todo"><div class="badge">2</div></div>
+                    <div class="event-box">holiday</div>
+                </div>
+                <div id="d-11" class="month-day">
+                    <div class="date">1</div>
+                    <div class="todo"><div class="badge"></div></div>
+                    <div class="event-box">holiday</div>
+                </div>
+                <div id="d-12" class="month-day">
+                    <div class="date">1</div>
+                    <div class="todo"><div class="badge">10</div></div>
+                    <div class="event-box">holiday</div>
+                </div>
+                <div id="d-13" class="month-day weekend">
+                    <div class="date">1</div>
+                    <div class="todo"><div class="badge"></div></div>
+                    <div class="event-box">holiday</div>
+                </div>
+                <div id="d-14" class="month-day weekend">
+                    <div class="date">1</div>
+                    <div class="todo"><div class="badge">9</div></div>
+                    <div class="event-box">holiday</div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div id="d-15" class="month-day">
+                    <div class="date">1</div>
+                    <div class="todo"><div class="badge"></div></div>
+                    <div class="event-box">holiday</div>
+                </div>
+                <div id="d-16" class="month-day">
+                    <div class="date">1</div>
+                    <div class="todo"><div class="badge"></div></div>
+                    <div class="event-box">holiday</div>
+                </div>
+                <div id="d-17" class="month-day">
+                    <div class="date">1</div>
+                    <div class="todo"><div class="badge">10</div></div>
+                    <div class="event-box">holiday</div>
+                </div>
+                <div id="d-18" class="month-day">
+                    <div class="date">1</div>
+                    <div class="todo"><div class="badge">10</div></div>
+                    <div class="event-box">holiday</div>
+                </div>
+                <div id="d-19" class="month-day">
+                    <div class="date">1</div>
+                    <div class="todo"><div class="badge"></div></div>
+                    <div class="event-box">holiday</div>
+                </div>
+                <div id="d-20" class="month-day weekend">
+                    <div class="date">1</div>
+                    <div class="todo"><div class="badge"></div></div>
+                    <div class="event-box">holiday</div>
+                </div>
+                <div id="d-21" class="month-day weekend">
+                    <div class="date">1</div>
+                    <div class="todo"><div class="badge">10</div></div>
+                    <div class="event-box">holiday</div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div id="d-22" class="month-day">
+                    <div class="date">1</div>
+                    <div class="todo"><div class="badge">10</div></div>
+                    <div class="event-box">holiday</div>
+                </div>
+                <div id="d-23" class="month-day">
+                    <div class="date">1</div>
+                    <div class="todo"><div class="badge">10</div></div>
+                    <div class="event-box">holiday</div>
+                </div>
+                <div id="d-24" class="month-day">
+                    <div class="date">1</div>
+                    <div class="todo"><div class="badge">10</div></div>
+                    <div class="event-box">holiday</div>
+                </div>
+                <div id="d-25" class="month-day">
+                    <div class="date">1</div>
+                    <div class="todo"><div class="badge">10</div></div>
+                    <div class="event-box">holiday</div>
+                </div>
+                <div id="d-26" class="month-day">
+                    <div class="date">1</div>
+                    <div class="todo"><div class="badge">10</div></div>
+                    <div class="event-box">holiday</div>
+                </div>
+                <div id="d-27" class="month-day weekend">
+                    <div class="date">1</div>
+                    <div class="todo"><div class="badge">10</div></div>
+                    <div class="event-box">holiday</div>
+                </div>
+                <div id="d-28" class="month-day weekend">
+                    <div class="date">1</div>
+                    <div class="todo"><div class="badge">10</div></div>
+                    <div class="event-box">holiday</div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div id="d-29" class="month-day">
+                    <div class="date">1</div>
+                    <div class="todo"><div class="badge">2</div></div>
+                    <div class="event-box">holiday</div>
+                </div>
+                <div id="d-30" class="month-day">
+                    <div class="date">1</div>
+                    <div class="todo"><div class="badge"></div></div>
+                    <div class="event-box">holiday</div>
+                </div>
+                <div id="d-31" class="month-day">
+                    <div class="date">1</div>
+                    <div class="todo"><div class="badge"></div></div>
+                    <div class="event-box">holiday</div>
+                </div>
+                <div id="d-32" class="month-day">
+                    <div class="date">1</div>
+                    <div class="todo"><div class="badge"></div></div>
+                    <div class="event-box">holiday</div>
+                </div>
+                <div id="d-33" class="month-day">
+                    <div class="date">1</div>
+                    <div class="todo"><div class="badge"></div></div>
+                    <div class="event-box">holiday</div>
+                </div>
+                <div id="d-34" class="month-day weekend">
+                    <div class="date">1</div>
+                    <div class="todo"><div class="badge">10</div></div>
+                    <div class="event-box">holiday</div>
+                </div>
+                <div id="d-35" class="month-day weekend">
+                    <div class="date">1</div>
+                    <div class="todo"><div class="badge">3</div></div>
+                    <div class="event-box">holiday</div>
+                </div>
+            </div>
+        </div>
 
     </main>
 </body>
