made last row of calender visible when needed in js and set id for last row in html

--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                     <div class="event-box">holiday</div>
                 </div>
             </div>
-            <div class="row">
+            <div id="last-calend-row" class="row">
                 <div id="d-36" class="month-day">
                     <div class="date">1</div>
                     <div class="todo"><div class="badge">2</div></div>
