add calendar navigator to aside html, add font awesome(html head)

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script defer type="text/javascript" src="jquery-3.4.1.js"></script>
 
     <link rel="stylesheet" media="(min-width: 800px)" href="calender/calender.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
     <link rel="stylesheet" media="(min-width: 800px)" href="ToDo/ToDo.css">
 
 
@@ -58,6 +59,16 @@
             <div id="removePromptDiv"> <!--This is the remove text prompt-->
                 <h2>Are you sure that you would like to remove this?</h2>
                 <button class="textButton" id="removeTheTextButton">Enter</button>
+            </div>
+        </div>
+
+        <div id="calend-nav">
+            <div class="calend-nav-btn">
+                <i class="fas fa-arrow-left"></i>
+            </div>
+            <div id="calend-month-name">Jovember</div>
+            <div class="calend-nav-btn">
+                <i class="fas fa-arrow-right"></i>
             </div>
         </div>
 
