made arrows battons change current month forward and backward

--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
         </div>
 
         <div id="calend-nav">
-            <div class="calend-nav-btn">
+            <div class="calend-nav-btn" onclick="monthBack()">
                 <i class="fas fa-arrow-left"></i>
             </div>
             <div id="calend-month-name">Jovember</div>
-            <div class="calend-nav-btn">
+            <div class="calend-nav-btn" onclick="monthForward()">
                 <i class="fas fa-arrow-right"></i>
             </div>
         </div>
