--- a/index.html
+++ b/index.html
@@ -50,17 +50,25 @@
     <aside>
         <!--This is for the text prompt that appears-->
         <div id="textPromptDiv">
-            <div id="addPromptDiv"> <!--This is the add text prompt-->
+            <div id="addPromptDiv">
+                <!--This is the add text prompt-->
                 <label for="textPrompt">What would you like to add?</label>
                 <textarea name="textPrompt" id="textPrompt" cols="30" rows="5"></textarea>
                 <button class="textButton" id="enterTheTextButton">Enter</button>
             </div>
-            <div id="removePromptDiv"> <!--This is the remove text prompt-->
+            <div id="removePromptDiv">
+                <!--This is the remove text prompt-->
                 <h2>Are you sure that you would like to remove this?</h2>
                 <button class="textButton" id="removeTheTextButton">Enter</button>
             </div>
         </div>
 
+        <!--div for welcomemessage, timea and date-->
+        <div class="welcomeMessage">
+            <p id="time"></p>
+            <p id="dateOfYear"></p>
+            <h3 id="dayOfWeek"></h3>
+        </div>
         <!--This is the div that holds the current ToDo-->
         <div id="toDoHolder">
             <p id="toDoText"></p>
