We added a way to change the ToDo

--- a/index.html
+++ b/index.html
@@ -61,6 +61,12 @@
                 <h2>Are you sure that you would like to remove this?</h2>
                 <button class="textButton" id="removeTheTextButton">Enter</button>
             </div>
+            <div id="changePromptDiv">
+                <!--This is the change text prompt-->
+                <label for="changeTextPrompt">What would you like to change to?</label>
+                <textarea name="changeTextPrompt" id="changeTextPrompt" cols="30" rows="5"></textarea>
+                <button class="textButton" id="changeTheTextButton">Enter</button>
+            </div>
         </div>
 
         <!--div for welcomemessage, timea and date-->
@@ -78,6 +84,7 @@
         <div id="toDoButtons">
             <button id="addTodo">Lägg till ToDo</button>
             <button id="removeTodo">Ta bort ToDo</button>
+            <button id="changeTodo">Ändra en ToDo</button>
         </div>
     </aside>
     <main>
