--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@
         </div>
 
         <!--div for welcomemessage, timea and date-->
+        <div class="cat-image">
+            <img src="black-cat.png" alt="" srcset="">
+        </div>
         <div class="welcomeMessage">
             <p id="time"></p>
             <p id="dateOfYear"></p>
