add comments, css cleaned

--- a/index.html
+++ b/index.html
@@ -74,10 +74,18 @@
     </aside>
     <main>
         <div id="calender">
+            <!--container for one week/7 days-->
             <div class="row">
+                <!--calender-table cell for one day-->
                 <div id="d-1" class="month-day">
+                    <!--element for day number in month-->
                     <div class="date">99</div>
-                    <div class="todo"><div class="badge">10</div></div>
+                    <!--container for to-do info for this day-->
+                    <div class="todo">
+                        <!--visual element to display the number of to-dos on this day-->
+                        <div class="badge">10</div>
+                    </div>
+                    <!--containers for display events and holidays for this day-->
                     <div class="event-box">
                         <div class="holiday">JUL</div>
                         <div class="event">Birthday</div>
