fix cat and clock position (after commit e19c518)

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
                 <button class="textButton" id="changeTheTextButton">Enter</button>
             </div>
         </div>
+
         <div id="calend-nav">
             <div id="calend-nav-btn-back" onclick="monthBack()">
                 <i class="fas fa-arrow-left"></i>
@@ -79,6 +80,17 @@
                 <i class="fas fa-arrow-right"></i>
             </div>
         </div>
+
+        <!--div for welcomemessage, timea and date-->
+        <div class="cat-image">
+            <img src="black-cat.png" alt="" srcset="">
+        </div>
+        <div class="welcomeMessage">
+            <p id="time"></p>
+            <p id="dateOfYear"></p>
+            <h3 id="dayOfWeek"></h3>
+        </div>
+
         <!--This is the div that holds the current ToDo-->
         <div id="toDoHolder">
             <p id="toDoText"></p>
