--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 <h3 id="dayOfWeek"></h3>
             </div>
         </div>
-        
+
         <!--div for welcomemessage, timea and date-->
         <div class="cat-image">
             <img src="black-cat.png" alt="" srcset="">
@@ -112,6 +112,17 @@
         </div>
     </aside>
     <main>
+        <table>
+            <tr>
+                <th>Måndag</th>
+                <th>Tisdag</th>
+                <th>Onsdag</th>
+                <th>Torsdag</th>
+                <th>Fredag</th>
+                <th class="wknd">Lördag</th>
+                <th class="wknd">Söndag</th>
+            </tr>
+        </table>
         <div id="calender">
             <!--container for one week/7 days-->
             <div class="row">
