--- a/index.html
+++ b/index.html
@@ -104,6 +104,17 @@
         </div>
     </aside>
     <main>
+        <table>
+            <tr>
+                <th>Måndag</th>
+                <th>Tisdag</th>
+                <th>Onsdag</th>
+                <th>Torsdag</th>
+                <th>Fredag</th>
+                <th class="wknd">Lördag</th>
+                <th class="wknd">Söndag</th>
+            </tr>
+        </table>
         <div id="calender">
             <!--container for one week/7 days-->
             <div class="row">
