changed path for cat img

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         </div>
         <!--div for welcomemessage, timea and date-->
         <div class="cat-image">
-            <img src="black-cat.png" alt="" srcset="">
+            <img src="/Images/black-cat.png" alt="" srcset="">
         </div>
         <div class="welcomeMessage">
             <p id="time"></p>
