--- a/index.html
+++ b/index.html
@@ -75,22 +75,22 @@
             <div id="calend-nav-btn-back" onclick="monthBack()">
                 <i class="fas fa-arrow-left"></i>
             </div>
-            <div id="calend-month-name">November</div>
+            <div id="calend-month-name">Jovember</div>
             <div id="calend-nav-btn-forward" onclick="monthForward()">
                 <i class="fas fa-arrow-right"></i>
             </div>
         </div>
-      
-        <!--div for welcomemessage, time and date-->
+
+        <!--div for welcomemessage, timea and date-->
         <div class="cat-image">
-            <img src="black-cat.png" alt="" srcset="">
+            <img src="/Images/black-cat.png" alt="" srcset="">
         </div>
         <div class="welcomeMessage">
             <p id="time"></p>
             <p id="dateOfYear"></p>
             <h3 id="dayOfWeek"></h3>
         </div>
-      
+
         <!--This is the div that holds the current ToDo-->
         <div id="toDoHolder">
             <p id="toDoText"></p>
