--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
         <!--div for welcomemessage, timea and date-->
         <div class="cat-image">
-            <img src="/Images/black-cat.png" alt="" srcset="">
+            <img src="Images/black-cat.png" alt="" srcset="">
         </div>
         <div class="welcomeMessage">
             <p id="time"></p>
