fixed more bugs

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <link rel="stylesheet" media="(min-width: 800px)" href="ToDo/ToDo.css">
 
 
-    <script Async src="calender/calender.js"></script>
-    <script Async src="ToDo/ToDo.js"></script>
+    <script defer src="calender/calender.js"></script>
+    <script defer src="ToDo/ToDo.js"></script>
     <script defer src="layout/layout.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Tomorrow&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Quicksand:600&display=swap" rel="stylesheet">
