--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="ToDo/ToDo.css">
     <!--För dator-->
     <link rel="stylesheet" media="(min-width: 800px)" href="layout/layout.css">
     <!--För mobil-->
@@ -13,7 +14,6 @@
 
     <link rel="stylesheet" media="(min-width: 800px)" href="calender/calender.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
-    <link rel="stylesheet" media="(min-width: 800px)" href="ToDo/ToDo.css">
 
 
     <script defer src="calender/calender.js"></script>
@@ -33,7 +33,7 @@
             <img src="Images/seasons/summer.png" class="seasonImgs" id="summer" alt="Summer">
             <img src="Images/seasons/fall.png" class="seasonImgs" id="fall" alt="Fall">
         </div>
-        <h1>Kalender 2019</h1>
+        <h1>Kalender 2020</h1>
         <div class="iconsForCalenderMonths">
             <img src="Images/imgsForMonths/november.png" class="monthImgs" id="november" alt="November">
             <img src="Images/imgsForMonths/december.png" class="monthImgs" id="december" alt="December">
@@ -52,7 +52,7 @@
     <aside>
         <!--div for welcomemessage, timea and date-->
         <div class="cat-image">
-            <img src="Images/black-cat.png" alt="" srcset="">
+            <img src="Images/black-cat.png" alt="" srcset="" width="116" height="116">
         </div>
         <div class="welcomeMessage">
             <p id="time"></p>
@@ -81,11 +81,11 @@
         </div>
 
         <div id="calend-nav">
-            <div id="calend-nav-btn-back" onclick="monthBack()">
+            <div id="calend-nav-btn-back">
                 <i class="fas fa-arrow-left"></i>
             </div>
             <div id="calend-month-name">Jovember</div>
-            <div id="calend-nav-btn-forward" onclick="monthForward()">
+            <div id="calend-nav-btn-forward">
                 <i class="fas fa-arrow-right"></i>
             </div>
         </div>
